--- a/Proyectos/styles.css
+++ b/Proyectos/styles.css
@@ -1,3 +1,56 @@
 html{
-    font-size: 62.5;
+    font-size: 62.5%;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: honeydew;
+}
+
+.c_body{
+    margin: auto;
+    width:80%;
+    height:140rem;
+    display:flex;
+    flex-direction: column;
+    gap:10rem;
+}
+h1{
+    text-align: center;
+    font-size:4rem;
+    padding:5rem;
+}
+.rows{
+    width:100%;
+    height:42rem;
+    display:flex;
+    justify-content: space-between;
+    
+}
+.col-1{
+    background-color: antiquewhite;
+    width:30%;
+    height:100%;
+    font-size: 1.2rem;
+    display:flex;
+    flex-direction: column;
+}
+.col-1 img{
+    width:100%;
+ height:55%;
+}
+h2{
+    text-align: center;
+}
+.col-1 p{
+    text-align: center;
+}
+.btn{
+    position:relative;
+    width:15rem;
+    height:4rem;
+    background-color:rgb(47, 177, 177);
+    margin:auto;
+          
+}
+a{
+    text-decoration:none;
+    color:white;
 }
